<resources>
    <string name="app_name">RawGCards</string>

    <!-- Categories Fragment strings -->
    <string name="label_action">Action</string>
    <string name="label_rpg">RPG</string>
    <string name="label_shooting">Shooting</string>
    <string name="label_racing">Racing</string>
    <string name="label_platform">Platform</string>
    <string name="label_fighting">Fighting</string>
    <string name="label_error">Sorry! Something went wrong..</string>
    <string name="label_coming_soon">Coming soon...</string>

    <!-- Account Fragment strings -->
    <string name="label_friends">Your friends</string>
    <string name="label_all">All users</string>
    <string name="label_requests">Your friend requests</string>
    <string name="label_sign_out">Sign out</string>
    <string name="accept_friend">Accept</string>
    <string name="decline_friend">Decline</string>
    <string name="pending_request">Pending your friend request</string>
    <string name="search_label">Search</string>
    <string name="list_header">Friends shared games</string>
</resources>
