<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.tomgu.rawgcards.categoriedialog.CategorieViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/custom_wallpoet"
            android:text="@string/label_error"
            android:textColor="@color/colorAccent"
            app:visibility="@{viewModel.getIsApiCallFailed()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:visibility="@{viewModel.getIsLoading()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:columnCount="2"
            android:padding="2dp"
            android:rowCount="3"
            app:visibility="@{!viewModel.getIsApiCallFailed() &amp;&amp; !viewModel.getIsLoading()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".categoriedialog.CategorieFragment">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/custom_wallpoet"
                    android:text="@string/label_action" />

                <com.tomgu.rawgcards.categoriedialog.CategorieShape
                    android:id="@+id/categorieAction"
                    android:layout_width="160dp"
                    android:layout_height="210dp"
                    android:padding="3dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/custom_wallpoet"
                    android:text="@string/label_fighting" />

                <com.tomgu.rawgcards.categoriedialog.CategorieShape
                    android:id="@+id/categorieFighting"
                    android:layout_width="160dp"
                    android:layout_height="210dp"
                    android:padding="3dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/custom_wallpoet"
                    android:text="@string/label_racing" />

                <com.tomgu.rawgcards.categoriedialog.CategorieShape
                    android:id="@+id/categorieRacing"
                    android:layout_width="160dp"
                    android:layout_height="210dp"
                    android:padding="3dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/custom_wallpoet"
                    android:text="@string/label_shooting" />

                <com.tomgu.rawgcards.categoriedialog.CategorieShape
                    android:id="@+id/categorieShooting"
                    android:layout_width="160dp"
                    android:layout_height="210dp"
                    android:padding="3dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/custom_wallpoet"
                    android:text="@string/label_rpg" />

                <com.tomgu.rawgcards.categoriedialog.CategorieShape
                    android:id="@+id/categorieRPG"
                    android:layout_width="160dp"
                    android:layout_height="210dp"
                    android:padding="3dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/custom_wallpoet"
                    android:text="@string/label_platform" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@drawable/gradient_list_item"
                    android:id="@+id/categoriePlatform"
                    android:layout_width="160dp"
                    android:layout_height="210dp"
                    android:padding="3dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/custom_wallpoet"
                        android:text="@string/label_coming_soon"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>